text correction "approach"

--- a/_data/pages/approach.yml
+++ b/_data/pages/approach.yml
@@ -18,7 +18,7 @@ de:
     - title: Überblick
       text: In Abhängigkeit von der Aufgabenstellung kommen Leistungen aus unseren verschiedenen Kompetenzfeldern im Projekt zur Anwendung.
     - title: 360°-Sicht
-      text: Ganzheitliche Analyse des Projekt­umfeldes und umfassende Untersuchung der Nutzerbedürfnisse
+      text: Ganzheitliche Analyse des Projekt­umfeldes und umfassende Untersuchung der Nutzer­bedürfnisse
     - title: Synthese
       text: Zusammenfassung, Strukturierung und Bewertung der in der 360°-Sicht gewonnenen Erkenntnisse und Definition der Anforderungen an die Lösung
     - title: Konzept & Design
