added whatsapp phone number

--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -30,7 +30,7 @@ de:
 
   back_button_label: Alle Jobangebote
   learn_more: Mehr Erfahren
-  whatsapp_url: https://wa.me/<number>
+  whatsapp_url: https://wa.me/<015165218372>
 
   benefits:
     - label: Weiterbilding
@@ -96,7 +96,7 @@ en:
 
   back_button_label: Alle Jobangebote
   learn_more: Mehr Erfahren
-  whatsapp_url: https://wa.me/<number>
+  whatsapp_url: https://wa.me/<015165218372>
 
   benefits:
     - label: Weiterbilding
