--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -64,10 +64,8 @@ de:
     title: Für Fragen stehen wir Dir gern zur Verfügung.
     avatar_img: about.jpg
     name: Uta Kanthack
-    position: Business Administration & Controlling
-    tel: +49 331 97 992 323
-    mobile: +49 151 461 432 37
-    email: uta.kanthack@d-labs.com
+    tel: +49 331 97 992 334
+    email: jobs@d-labs.com
     cta_text: Anfragen
 
 
