--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -65,9 +65,9 @@ de:
     avatar_img: about.jpg
     name: Uta Kanthack
     position: Business Administration & Controlling
-    tel: +49 331 97 992 323
+    tel: +49 331 97 992 334
     mobile: +49 151 461 432 37
-    email: uta.kanthack@d-labs.com
+    email: jobs@d-labs.com
     cta_text: Anfragen
 
 
@@ -131,7 +131,7 @@ en:
     avatar_img: about.jpg
     name: Uta Kanthack
     position: Business Administration & Controlling
-    tel: +49 331 97 992 323
+    tel: +49 331 97 992 334
     mobile: +49 151 461 432 37
-    email: uta.kanthack@d-labs.com
+    email: jobs@d-labs.com
     cta_text: Anfragen
