added first chunk of images

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -7,9 +7,9 @@ de:
 
   Wir konzipieren, optimieren und implementieren digitale Produkte und Services mit klarem Fokus auf das Wesentliche: den Bedürfnissen der Anwender.
   "
-  intro_image: about.jpg
+  intro_image: dlabs_about-us-01.jpg
 
-  about_image: about-us.jpg
+  about_image: dlabs_about-us-02.jpg
   about_text: "
   Nutzerzentriertes Arbeiten und Agilität sind für uns nicht nur Schlagworte, sondern konkrete Vorgehensweisen, die von unseren Experten in allen Kompetenzfeldern angewandt werden. Dieser interdisziplinäre Ansatz ermöglicht es uns flexibel die Perspektive zu wechseln, innovative Lösungsansätze zu entwickeln und die Potenziale der Digitalisierung nachhaltig nutzbar zu machen. So schaffen wir echte Mehrwerte.
 
@@ -33,9 +33,9 @@ en:
 
   Wir konzipieren, optimieren und implementieren digitale Produkte und Services mit klarem Fokus auf das Wesentliche: den Bedürfnissen der Anwender.
   "
-  intro_image: about.jpg
+  intro_image: dlabs_about-us-01.jpg
 
-  about_image: about-us.jpg
+  about_image: dlabs_about-us-02.jpg
   about_text: "
   Nutzerzentriertes Arbeiten und Agilität sind für uns nicht nur Schlagworte, sondern konkrete Vorgehensweisen, die von unseren Experten aus den Bereichen User Research, Digital Experience Design, Software Engineering sowie Prozess- und Innovations-Management angewandt werden. Dieser interdisziplinäre Ansatz ermöglicht es uns flexibel die Perspektive zu wechseln, innovative Lösungsansätze zu entwickeln und die Potenziale der Digitalisierung nachhaltig nutzbar zu machen. So schaffen wir echte Mehrwerte.
 
