--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -14,19 +14,19 @@ de:
     - name: Peter Weller
       position: Senior User Researcher
       quote: Weil wir die Welt jeden Tag ein Stück zugänglicher machen. Mit unserem Fokus auf den Bedürfnissen der Endanwender, schaffen wir Lösungen die unsere Kunden begeistern. Hier wird User Experience gelebt.
-      img: about.jpg
+      img: profil_peter.jpg
     - name: Claudia Steinhoff
       position: Director Digital Experience Design
       quote: Die enge Zusammenarbeit mit Experten aus verschiedenen Bereichen und mit unterschiedlichen Schwerpunkten ist immer wieder spannend. Auch die Bandbreite der Projekte für namhafte Kunden aus den unterschiedlichsten Branchen sorgt dafür, dass ich immer noch etwas dazu lernen kann. Nicht zuletzt schlägt mein Herz für Potsdam.
-      img: about.jpg
+      img: profil_claudia-St.jpg
     - name: Alexander Vielhaber 
       position: User Researcher
       quote: Im Sinne der Menschen, für die Lösungen gestaltet werden, ist es mein Ziel ihre Bedürfnisse zu verstehen und in den Entwicklungsprozess mit einfließen zu lassen, um ihre Lebens- und Arbeitsbedingungen nutzbringend zu verbessern.
-      img: about.jpg
+      img: profil_alex.jpg
     - name: Doreen Pabst  
       position: Senior Digital Experience Designer
       quote: Bei D-LABS kann ich so arbeiten, dass ich noch Zeit für meine Familie habe. Gleichzeitig habe ich die Möglichkeit auf anspruchsvollen Projekten zu arbeiten. Diese Vereinbarkeit ist mir sehr wichtig, weil Familie zu haben hier nicht bedeutet Abstriche in der beruflichen Entwicklung machen zu müssen.
-      img: about.jpg
+      img: profil_doreen.jpg
 
   back_button_label: Alle Jobangebote
   learn_more: Mehr Erfahren
@@ -62,7 +62,7 @@ de:
 
   contact:
     title: Für Fragen stehen wir Dir gern zur Verfügung.
-    avatar_img: about.jpg
+    avatar_img: dlabs_contact-uta.jpg
     name: Uta Kanthack
     position: Business Administration & Controlling
     tel: +49 331 97 992 323
@@ -88,11 +88,11 @@ en:
     - name: Peter Weller
       position: Researcher
       quote: Weil wir die Welt jeden Tag ein Stück zugänglicher machen. Mit unserem Fokus auf den Bedürfnissen der Endanwender, schaffen wir Lösungen die unsere Kunden begeistern. Hier wird User Experience gelebt.
-      img: about.jpg
+      img: profil_peter.jpg
     - name: Peter Weller
       position: Researcher
       quote: Weil wir die Welt jeden Tag ein Stück zugänglicher machen. Mit unserem Fokus auf den Bedürfnissen der Endanwender, schaffen wir Lösungen die unsere Kunden begeistern. Hier wird User Experience gelebt.
-      img: about.jpg
+      img: profil_peter.jpg
 
   back_button_label: Alle Jobangebote
   learn_more: Mehr Erfahren
@@ -128,7 +128,7 @@ en:
 
   contact:
     title: Für Fragen stehen wir Dir gern zur Verfügung.
-    avatar_img: about.jpg
+    avatar_img: dlabs_contact-uta.jpg
     name: Uta Kanthack
     position: Business Administration & Controlling
     tel: +49 331 97 992 323
