--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -1,5 +1,5 @@
 de:
-  title_text: '**Dein Profil!** Unser Angebot!'
+  title_text: '**Dein Profil!**<br/>Unser Angebot!'
 
   intro_text: 'Du möchtest dich in unser kreatives, interdisziplinäres Team einbringen? Dann schau dir unsere Jobangebote für dich an und sende uns deine Kontaktdaten! Der erste Schritt zum neuen Job bei D-LABS in Potsdam oder am Standort Berlin ist schnell gemacht.'
   list_title: Wir suchen
