--- a/_data/pages/services.yml
+++ b/_data/pages/services.yml
@@ -18,7 +18,7 @@ de:
       color: red
     - name: Enabling & Coaching
       img: about.jpg
-      text: Als Spezialisten entwickeln wir gemeinsam mit unseren Kunden digitale Lösungen. Unsere langjährige Erfahrung und unsere persönliche Leidenschaft sind der perfekte Mix, gemeinsam die besten digitalen Services zu kreieren. Wir entwickeln Strategien und unterstützen unsere Kunden bei der strategischen Neuausrichtung. 
+      text: Wir entwickeln anhand der Bedürfnisse unserer Teilnehmer maßgeschneiderte Formate. In diesen nutzerzentrierten Workshops und Trainings vermitteln wir die erforderlichen Fähigkeiten, welche insbesondere im Kontext von Innovationsprozessen und agilen Arbeitsweisen benötigt werden. 
       color: green
     - name: Business & Innovation
       img: about.jpg
