--- a/_data/pages/approach.yml
+++ b/_data/pages/approach.yml
@@ -60,9 +60,9 @@ de:
         - Prozessautomatisierung und Digitalisierung
         - Erhöhung der Transparenz für alle Beteiligten
       approaches:
-        - Umfangreiche Analyse der internen und externen Service-Prozesse, z.B. mit Hilfe qualitativer Interviews mit Vertretern der verschiedenen Zielgruppen, sowie Workshops mit Prozess­experten aus verschiedenen Fachbereichen
-        - Entwicklung von Personas und Abbildung der IST-Situation in [Customer Journey Maps](/methods/customer_journey_maps.html)
-        - Co-kreative Entwicklung eines Leitbildes für die einheitliche Kundenschnittstelle, Ausarbeitung eines kundenzentrierten Service-Design-Konzeptes und Abbildung in ­Service Blueprints
+        - Umfangreiche Analyse der internen und externen Service-Prozesse, z.B. mit Hilfe [qualitativer Interviews](/methods/qualitative_befragung.html) mit Vertretern der verschiedenen Zielgruppen, sowie Workshops mit Prozess­experten aus verschiedenen Fachbereichen
+        - Entwicklung von [Personas](/methods/personas.html) und Abbildung der IST-Situation in [Customer Journey Maps](/methods/customer_journey_maps.html)
+        - Co-kreative Entwicklung eines Leitbildes für die einheitliche Kundenschnittstelle, Ausarbeitung eines kundenzentrierten Service-Design-Konzeptes und Abbildung in ­[Service Blueprints](/methods/service_blueprint.html)
       results:
         - Zukunftsweisendes Service-Konzept zur Realisierung der einheitlichen Kundenschnittstelle, z.B. mit Hilfe eines Online-Self-Service-Portals für die verschiedenen Kundengruppen
 
