--- a/_data/pages/approach.yml
+++ b/_data/pages/approach.yml
@@ -83,7 +83,7 @@ de:
         - Kennenlernen von Implementierungsstrategien 
         - Aufbau von Wissen zu agilem Arbeiten in Unternehmen sowie der Planung von Projekten und Workshops
       approaches:
-        - "Einführung in Design Thinking: Kennenlernen des gesamten Design Thinking Prozesses anhand einer generischen Challenge"
+        - "[Einführung in Design Thinking:](/methods/qualifying_coaches.html) Kennenlernen des gesamten Design Thinking Prozesses anhand einer generischen Challenge"
         - "Vertiefung und Coaching: Bearbeitung einer konzerninternen Challenge, wobei die Teilnehmer selbst als Coaches agierten"
         - "Implementierungsstrategien: Vorstellung von Business Model Canvas, Value Proposition Canvas und Systems Thinking; Standortbestimmung – Agilität in der Organisation"
         - "Projekt- und Workshopplanung: Auftragsklärung und Planung interner Projekte"
@@ -109,7 +109,7 @@ de:
         - Unterstützung der Orientierung des Besuchers innerhalb der Ausstellung
       approaches:
         - Definition eines MVP (Minimum Viable Product) gemeinsam mit dem Kunden auf Basis vorhandener Research-Ergebnisse
-        - Durchführung Co-Creativer Workshops mit dem Kunden und iterative Entwicklung von Konzept und Design auf Basis von Prototypen 
+        - Durchführung [Co-Creativer Workshops](/methods/co-creation.html) mit dem Kunden und iterative Entwicklung von Konzept und Design auf Basis von [Prototypen](/methods/evolutionary_prototyping.html) 
         - Agile Umsetzung des MVP sowie dessen Erweiterung
       results:
         - Intuitiv benutzbare App für iOS und Android für die multimediale Begleitung und Unterstützung des Besuchers während und nach dem Ausstellungsbesuch
