added new images

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -100,7 +100,7 @@ de:
 
   blog_cta_text: Erfahren Sie Mehr
 
-  jobs_image: jobs-portrait.jpg
+  jobs_image: D-LABS_Jobs.jpg
   jobs_lead: Jobs
   jobs_title: Deine Chance! Dein neuer Job!
   jobs_desc: Werde Teil des D-LABS-Teams. Bei uns warten innovative Projekte und abwechslungsreiche Aufgaben auf dich. Informiere dich über unsere Job-Angebote und schicke uns noch heute deine Kontaktdaten!
@@ -133,7 +133,7 @@ en:
 
   blog_cta_text: Erfahren Sie Mehr
 
-  jobs_image: jobs-portrait.jpg
+  jobs_image:  D-LABS_Jobs.jpg
   jobs_lead: Jobs
   jobs_title: Werde Teil unseres Teams
   jobs_desc: Zukunftsweisendes Service-Konzept zur Realisierung der einheitlichen Kundenschnittstelle, z.B. mit Hilfe eines Online-Self-Service-Portals für die verschiedenen Kundengruppen.
