--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -108,33 +108,33 @@ de:
   jobs_cta_url: /blog.html
 
 en:
-  hero_claim: Bedarfe verstehen. Potenziale erkennen. Den richtigen Fokus setzen.<br/><b>magnifying potentials</b>
+  hero_claim: Understand needs. Identify potentials. Set the right focus.<br/><b>Magnifying Potentials</b>
 
   screens:
-    - title: Wir geben Unternehmen Sicherheit, die Potenziale der Digitalisierung schnell, zielsicher und nachhaltig für sich zu nutzen.
-      cta: Wer wir sind
+    - title: We provide companies security to use the potential of digitalization for themselves quickly, purposefully and sustainably.
+      cta: Who We Are
       cta_target: /en/about.html
-    - title: Wie kann die Kundenschnittstelle eines Verteilnetzbetreibers einheitlich gestaltet werden?
-      text: Zukunftsweisendes Service-Konzept zur Realisierung der einheitlichen Kundenschnittstelle.
-      cta: Mehr zum Projekt
+    - title: How can the customer interface of a distribution system operator be designed in a uniform way?
+      text: Forward-looking service concept for the realization of a uniform customer interface.
+      cta: MORE ABOUT THE PROJECT
       cta_target: /en/approach.html#project1
-    - title: Wie macht man die Mitarbeiter eines DAX-Konzerns fit für agiles Arbeiten in interdisziplinären Teams?
-      text: Zukunftsweisendes Service-Konzept zur Realisierung der einheitlichen Kundenschnittstelle, z.B. mit Hilfe eines Online-Self-Service-Portals für die verschiedenen Kundengruppen.
-      cta: Mehr zum Projekt
+    - title: How do you train the employees of a DAX Group to be fit for agile working in interdisciplinary teams?
+      text: Building knowledge on agile work in the company and application in internal projects.
+      cta: MORE ABOUT THE PROJECT
       cta_target: /en/approach.html#project2
-    - title: Wie können die Besucher einer Ausstellung digital unterstützt werden?
-      text: Zukunftsweisendes Service-Konzept zur Realisierung der einheitlichen Kundenschnittstelle, z.B. mit Hilfe eines Online-Self-Service-Portals für die verschiedenen Kundengruppen.
-      cta: Mehr zum Projekt
-      cta_target: /en/approach.html#project1
+    - title: How can visitors to an exhibition be digitally supported?
+      text: Intuitively usable app for iOS and Android for visitor multimedia accompaniment and support during and after the exhibition visit.
+      cta: MORE ABOUT THE PROJECT
+      cta_target: /en/approach.html#project3
 
-  clients_heading: Unsere Kunden
-  clients_show_more: Mehr Anzeigen
-  clients_show_less: Weniger Anzeigen
+  clients_heading: Our Customers
+  clients_show_more: See more
+  clients_show_less: Show less
 
-  blog_cta_text: Erfahren Sie Mehr
+  blog_cta_text: Find out more
 
   jobs_image:  D-LABS_Jobs.jpg
   jobs_lead: Jobs
-  jobs_title: Werde Teil unseres Teams
-  jobs_desc: Zukunftsweisendes Service-Konzept zur Realisierung der einheitlichen Kundenschnittstelle, z.B. mit Hilfe eines Online-Self-Service-Portals für die verschiedenen Kundengruppen.
-  jobs_cta_text: Erfahre Mehr
+  jobs_title: Your chance! Your new job!
+  jobs_desc: Become part of the D-LABS team. Here with us, innovative projects and varied tasks are waiting for you. Inform yourself about our job offers and send us your contact details today.
+  jobs_cta_text: Find out more
