added english text

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -25,25 +25,25 @@ de:
 
 
 en:
-  intro_lead: Über uns
-  intro_title: Der Mensch steht bei uns im Vordergrund. Für ihn schaffen wir erlebbaren Mehrwert.
+  intro_lead: About us
+  intro_title: Humans are our main focus. For them, we create tangible added value.
   intro_text: "
-  D‑LABS ist ein Beratungs- und Designunternehmen, das 2006 auf Initiative von Hasso Plattner, gemeinsam mit unserem geschäftsführenden Gesellschafter Jörn Hartwig gegründet wurde.
+  D-LABS is a consulting and design company which was founded on the initiative of Hasso Plattner together with Jörn Hartwig, our managing partner, in 2006.
 
 
-  Wir konzipieren, optimieren und implementieren digitale Produkte und Services mit klarem Fokus auf das Wesentliche: den Bedürfnissen der Anwender.
+  We design, optimize and implement digital products and services with a clear focus on the essentials: the needs of the users.
   "
   intro_image: dlabs_about-us-01.jpg
 
   about_image: dlabs_about-us-02.jpg
   about_text: "
-  Nutzerzentriertes Arbeiten und Agilität sind für uns nicht nur Schlagworte, sondern konkrete Vorgehensweisen, die von unseren Experten aus den Bereichen User Research, Digital Experience Design, Software Engineering sowie Prozess- und Innovations-Management angewandt werden. Dieser interdisziplinäre Ansatz ermöglicht es uns flexibel die Perspektive zu wechseln, innovative Lösungsansätze zu entwickeln und die Potenziale der Digitalisierung nachhaltig nutzbar zu machen. So schaffen wir echte Mehrwerte.
+  For us, user-centered work and agility are not just buzzwords, but concrete approaches that are applied by our experts in all areas of competence.  This interdisciplinary approach enables us to flexibly change perspectives, to develop innovative solutions and to make sustainable use of the potential of digitalization.
 
 
-  Ein offener und vertrauensvoller Austausch mit unseren Kunden bildet dabei die Grundlage für eine erfolgreiche und effiziente Projektumsetzung. Dazu gehört auch, Wünsche kritisch zu hinterfragen, um das eigentliche Problem zu identifizieren, das einer Lösung bedarf.
+  An open and trusting exchange with our customers forms the basis for a successful and efficient project implementation. This includes critically questioning wishes in order to identify the real problem that needs to be resolved.
 
 
-  Mehr als 400 erfolgreich realisierte Projekte in verschiedensten Branchen bestätigen unseren ganzheitlichen Beratungsansatz und motivieren uns zur kontinuierlichen Weiterentwicklung unserer Methoden und Kompetenzen.
+  Several hundred successfully realized projects in various industries confirm our holistic consulting approach and motivate us to continuously develop our methods and competencies.
   "
 
-  location_title: Warum von uns erzählen, wenn es um Sie geht.<br/>Wir sind an drei Standorten im Einsatz und freuen uns auf Ihren Anruf!
+  location_title: Why speak about ourselves when it is about you.<br/>We operate out of three locations and look forward to your call!
