--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -108,7 +108,7 @@ de:
   jobs_cta_url: /blog.html
 
 en:
-  hero_claim: Understand needs. Identify potentials. Set the right focus.<br/><b>Magnifying Potentials</b>
+  hero_claim: Understand needs. Identify potentials. Set the right focus.<br/><b>magnifying potentials</b>
 
   screens:
     - title: We provide companies security to use the potential of digitalization for themselves quickly, purposefully and sustainably.
