added english text

--- a/_data/pages/blog.yml
+++ b/_data/pages/blog.yml
@@ -4,6 +4,6 @@ de:
   by_author: "von"
 
 en:
-  cta_learn_more: Mehr erfahren
-  back_button_text: Zurück zur Übersicht
+  cta_learn_more: learn more
+  back_button_text: back to the overview
   by_author: "by"
