added new images

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -100,7 +100,7 @@ de:
 
   blog_cta_text: Erfahren Sie Mehr
 
-  jobs_image: D-LABS_Jobs.jpg
+  jobs_image: dlabs_main-01-jobteaser.jpg
   jobs_lead: Jobs
   jobs_title: Deine Chance! Dein neuer Job!
   jobs_desc: Werde Teil des D-LABS-Teams. Bei uns warten innovative Projekte und abwechslungsreiche Aufgaben auf dich. Informiere dich über unsere Job-Angebote und schicke uns noch heute deine Kontaktdaten!
@@ -133,7 +133,7 @@ en:
 
   blog_cta_text: Find out more
 
-  jobs_image:  D-LABS_Jobs.jpg
+  jobs_image:  dlabs_main-01-jobteaser.jpg
   jobs_lead: Jobs
   jobs_title: Your chance! Your new job!
   jobs_desc: Become part of the D-LABS team. Here with us, innovative projects and varied tasks are waiting for you. Inform yourself about our job offers and send us your contact details today.
