added english text

--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -142,4 +142,4 @@ en:
     tel: +49 331 97 992 334
     mobile: +49 151 461 432 37
     email: jobs@d-labs.com
-    cta_text: Anfragen
+    cta_text: contact
