added english text

--- a/_data/pages/partners.yml
+++ b/_data/pages/partners.yml
@@ -20,5 +20,5 @@ de:
   content: D‑LABS pflegt zahlreiche Partnerschaften in einem regionalen Netzwerk. Von dem stetigen Austausch zu Trends und Innovationen im Bereich der Digitalisierung und dem Wissenstransfer zwischen den Partnern profitieren auch unsere Kunden.
 
 en:
-  title: Partners
-  content: D‑LABS pflegt zahlreiche Partnerschaften in einem regionalen Netzwerk. Von dem stetigen Austausch zu Trends und Innovationen im Bereich der Digitalisierung und dem Wissenstransfer zwischen den Partnern profitieren auch unsere Kunden.
+  title: We are part of a strong network
+  content: D-LABS maintains numerous partnerships within a regional network. Our customers also benefit from the constant exchange of trends and innovations in the field of digitalization and the transfer of knowledge between partners.  
